----------
v6.1.1-git
----------

[mms] Don't show option to add senders to safe images list if the current
      address cannot be added to the safe list.
[mms] Don't log authentication exception messages from the IMAP library;
      authentication failures are already logged by the authentication code.


------
v6.1.0
------

[mms] Fix fatal error when importing a S/MIME key (Bug #12290).
[mms] Fixed segfaults caused by SMTP debugging.


---------
v6.1.0RC1
---------

[mms] Add ability to (un)subscribe to all subfolders in dynamic view.
[mms] When checking for personal addresses when deciding whether to display
      images, only check against e-mail field.
[mms] Correctly notify dynamic mailbox view if sent-mail mailboxes are created
      in compose page.
[mms] Fix sending group addresses from smartmobile view.
[mms] Add 'horde_auth' option to SMTP configuration in backends.php.
[mms] Add null spam reporting driver.
[mms] Display information to user if incorrect character set data is preventing
      a text part from being displayed.
[mms] Fix regression in renaming mailboxes (Bug #12260).


-----------
v6.1.0beta2
-----------

[mms] Directly output image thumbnails via data URIs when possible.
[jan] Fix incorrect dependencies.


-----------
v6.1.0beta1
-----------

[mms] Add ability to create new flag directly from dynamic mailbox screen.
[mms] Implement 'refresh_time' preference in smartmobile view.
[mms] Add taphold message action menu to smartmobile mailbox page.
[mms] Add MongoDB driver for sentmail log storage.
[mms] Add IMAP cache specific purge action to the imap cache query script.
[mms] Add support for using SQL and NoSQL backends for IMAP/POP caching.
[mms] Add thumbnail generation for video attachments.
[mms] Convert Data URLs in a reply message into attachments so that compose
      attachment limits can be enforced (Bug #12167).
[mms] Allow attachments to be dragged/dropped from local filesystem on the
      dynamic compose page.