@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression preventing Virtual Inbox from refreshing once opened in dynamic view (Bug #12304).
 * [mms] Don&apos;t show option to add senders to safe images list if the current address cannot be added to the safe list.
 * [mms] Don&apos;t log authentication exception messages from the IMAP library; authentication failures are already logged by the authentication code.
  </notes>
@@ -3203,6 +3204,7 @@
    <date>2013-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression preventing Virtual Inbox from refreshing once opened in dynamic view (Bug #12304).
 * [mms] Don&apos;t show option to add senders to safe images list if the current address cannot be added to the safe list.
 * [mms] Don&apos;t log authentication exception messages from the IMAP library; authentication failures are already logged by the authentication code.
    </notes>
